# smart-llm-v2-rebuild

./: .gitignore  .gitmodules  README.md  overview.md  pyproject.toml
experiments/: 01_structured_control.py  03_add_verifier.py  replay_task_run.py
results/smoke-structured-control-kimi/: config.json  summary.json  task_runs.jsonl
results/smoke-verifier-kimi/: config.json  summary.json  task_runs.jsonl
results/structured-control-kimi-symbolic-seed0/: config.json  summary.json  task_runs.jsonl
results/verifier-kimi-symbolic-seed0/: config.json  summary.json  task_runs.jsonl
smart_llm_v2/: __init__.py  robots.py
smart_llm_v2/agents/: __init__.py  anthropic_client.py  executor.py  json_planner.py  message_builders.py  model_profiles.py  openai_client.py  paper_planner.py  plan.py  planner.py  provider_factory.py  verifier.py
smart_llm_v2/benchmark/: __init__.py  metrics.py  models.py  runner.py  tasks.py
smart_llm_v2/env/: __init__.py  ai2thor_wrapper.py  config.py  profiles.py  state_extractor.py
smart_llm_v2/skills/: __init__.py  base.py  manipulation.py  mobile.py
tests/: test_ai2thor_profiles.py  test_ai2thor_wrapper.py  test_anthropic_client.py  test_benchmark_tasks.py  test_executor.py  test_json_planner.py  test_message_builders.py  test_metrics.py  test_model_profiles.py  test_openai_client.py  test_paper_planner.py  test_replay_task_run.py  test_robots.py  test_runner.py  test_state_extractor.py  test_structured_control_experiment.py  test_verifier.py  test_verifier_experiment.py
