[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "smart-llm-v2"
version = "0.1.0"
description = "Rebuild and extension scaffold for SMART-LLM."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ai2thor==5.0.0",
]

[tool.setuptools.packages.find]
include = ["smart_llm_v2*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
